--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
-  "ConnectionStrings" : {
-    "DefaultConnection": "Data source=demoapp.db"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=DemoApp;Trusted_Connection=True;"
   },
   "TokenKey": "super secret unguessable key",
   "Logging": {
